<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_element"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="TextFields">


    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_change_pin"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center"/>


    <EditText
        android:id="@+id/tv_enter_pin"
        android:hint="@string/current_pin"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:importantForAutofill="no"
        android:background="#E7E7E7"/>

    <EditText
        android:id="@+id/tv_new_pin"
        android:hint="@string/new_pin"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="#E7E7E7"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/tv_confirm_pin"
        android:hint="@string/confirm_new_pin"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="#E7E7E7"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeButton"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/t_submit"
            android:layout_marginStart="15dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/t_cancel"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
