<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_deposit"
        android:textColor="#000"
        android:textSize="25sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/pinInput"
        android:hint="@string/dialog_enter_pin"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="#E7E7E7"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/depositButton"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/t_submit"
            android:layout_marginStart="15dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/t_cancel"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
